--- a/trunk/centraldesign/war/WEB-INF/web.xml
+++ b/trunk/centraldesign/war/WEB-INF/web.xml
@@ -4,14 +4,20 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-	<servlet>
-		<servlet-name>Centraldesign</servlet-name>
-		<servlet-class>br.com.yaw.CentraldesignServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Centraldesign</servlet-name>
-		<url-pattern>/centraldesign</url-pattern>
-	</servlet-mapping>
+	
+	<filter>
+		<filter-name>struts2</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<listener>
+		<listener-class>br.com.yaw.servlet.listener.OgnlListener</listener-class>
+	</listener>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
