--- a/centraldesign/war/WEB-INF/web.xml
+++ b/centraldesign/war/WEB-INF/web.xml
@@ -6,6 +6,15 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	<filter>
+		<filter-name>transaction_filter</filter-name>
+		<filter-class>br.com.yaw.servlet.filter.TransactionFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>transaction_filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
 	</filter>
@@ -16,6 +25,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	<listener>
 		<listener-class>br.com.yaw.servlet.listener.OgnlListener</listener-class>
+	</listener>
+	
+	<listener>
+		<listener-class>br.com.yaw.servlet.listener.GeneralContextListener</listener-class>
 	</listener>
 
 	<welcome-file-list>
