--- a/trunk/centraldesign/war/WEB-INF/web.xml
+++ b/trunk/centraldesign/war/WEB-INF/web.xml
@@ -14,13 +14,28 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<!--
+	<filter>
+		<filter-name>upload_filter</filter-name>
+		<filter-class>br.com.yaw.servlet.filter.UploadFilter</filter-class>
+		<init-param>
+			<param-name>urlImageHandle</param-name>
+			<param-value>/blobstore-servlet?action=resize</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>upload_filter</filter-name>
+		<url-pattern>/upload</url-pattern>
+	</filter-mapping>
+	-->
+	
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/struts/*</url-pattern>
 	</filter-mapping>
 	
 	<listener>
@@ -34,4 +49,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
+	<servlet>
+	
+		<servlet-name>BlobstoreServlet</servlet-name>
+		<servlet-class>br.com.yaw.servlet.BlobstoreServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>BlobstoreServlet</servlet-name>
+		<url-pattern>/blobstore-servlet</url-pattern>
+	</servlet-mapping>
 </web-app>
