--- a/yawp/war/WEB-INF/web.xml
+++ b/yawp/war/WEB-INF/web.xml
@@ -4,14 +4,19 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-	<servlet>
-		<servlet-name>Yawp</servlet-name>
-		<servlet-class>br.com.yaw.YawpServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Yawp</servlet-name>
-		<url-pattern>/yawp</url-pattern>
-	</servlet-mapping>
+	<filter>
+		<filter-name>transaction_filter</filter-name>
+		<filter-class>br.com.yaw.servlet.filter.TransactionFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>transaction_filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<listener>
+		<listener-class>br.com.yaw.servlet.listener.GeneralContextListener</listener-class>
+	</listener>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
