--- a/yawp/war/WEB-INF/web.xml
+++ b/yawp/war/WEB-INF/web.xml
@@ -22,9 +22,29 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>br.com.yaw.servlet.action.CompanyActionServlet</servlet-class>	
 	</servlet>
 	
+	<servlet>
+		<servlet-name>comment</servlet-name>
+		<servlet-class>br.com.yaw.servlet.action.CommentActionServlet</servlet-class>	
+	</servlet>
+	
+	<servlet>
+		<servlet-name>user</servlet-name>
+		<servlet-class>br.com.yaw.servlet.action.UserActionServlet</servlet-class>	
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>company</servlet-name>
 		<url-pattern>/company/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>comment</servlet-name>
+		<url-pattern>/comment/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>user</servlet-name>
+		<url-pattern>/user/*</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
