--- a/trunk/yawp/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/yawp/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Thu Apr 22 17:31:26 BRT 2010
+#Sun May 02 10:26:41 BRT 2010
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 warSrcDir=war
 warSrcDirIsOutput=true
