--- a/yawp/war/WEB-INF/web.xml
+++ b/yawp/war/WEB-INF/web.xml
@@ -4,14 +4,30 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+<!--	<filter>-->
+<!--		<filter-name>transaction_filter</filter-name>-->
+<!--		<filter-class>br.com.yaw.servlet.filter.TransactionFilter</filter-class>-->
+<!--	</filter>-->
+<!--	<filter-mapping>-->
+<!--		<filter-name>transaction_filter</filter-name>-->
+<!--		<url-pattern>/*</url-pattern>-->
+<!--	</filter-mapping>-->
+	
 	<filter>
-		<filter-name>transaction_filter</filter-name>
-		<filter-class>br.com.yaw.servlet.filter.TransactionFilter</filter-class>
+		<filter-name>session_filter</filter-name>
+		<filter-class>br.com.yaw.servlet.filter.SessionFilter</filter-class>
+		<init-param>
+			<param-name>urls_no_session</param-name>
+			<param-value>
+				/index.html,/company/add,/user/add,/user/add_contact			
+			</param-value>
+		</init-param>
 	</filter>
 	<filter-mapping>
-		<filter-name>transaction_filter</filter-name>
+		<filter-name>session_filter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
 	
 	<listener>
 		<listener-class>br.com.yaw.servlet.listener.GeneralContextListener</listener-class>
