--- a/yawp/war/WEB-INF/web.xml
+++ b/yawp/war/WEB-INF/web.xml
@@ -4,31 +4,17 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-<!--	<filter>-->
-<!--		<filter-name>transaction_filter</filter-name>-->
-<!--		<filter-class>br.com.yaw.servlet.filter.TransactionFilter</filter-class>-->
-<!--	</filter>-->
-<!--	<filter-mapping>-->
-<!--		<filter-name>transaction_filter</filter-name>-->
-<!--		<url-pattern>/*</url-pattern>-->
-<!--	</filter-mapping>-->
-	
-<!--	<filter>-->
-<!--		<filter-name>session_filter</filter-name>-->
-<!--		<filter-class>br.com.yaw.servlet.filter.SessionFilter</filter-class>-->
-<!--		<init-param>-->
-<!--			<param-name>urls_no_session</param-name>-->
-<!--			<param-value>-->
-<!--				/index.html,/company/add,/user/add,/user/add_contact			-->
-<!--			</param-value>-->
-<!--		</init-param>-->
-<!--	</filter>-->
-<!--	<filter-mapping>-->
-<!--		<filter-name>session_filter</filter-name>-->
-<!--		<url-pattern>/*</url-pattern>-->
-<!--	</filter-mapping>-->
 
+	<filter>
+		<filter-name>gae_downtime</filter-name>
+		<filter-class>br.com.yaw.servlet.filter.GAEDownTimeFilter</filter-class>
+	</filter>
 	
+	<filter-mapping>
+		<url-pattern>/*</url-pattern>
+		<filter-name>gae_downtime</filter-name>
+	</filter-mapping>
+
 	<listener>
 		<listener-class>br.com.yaw.servlet.listener.GeneralContextListener</listener-class>
 	</listener>
@@ -58,6 +44,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>br.com.yaw.servlet.action.BlobServlet</servlet-class>	
 	</servlet>
 	
+	<servlet>
+		<servlet-name>image</servlet-name>
+		<servlet-class>br.com.yaw.servlet.action.ImageServlet</servlet-class>	
+	</servlet>
+	
+	<servlet>
+		<servlet-name>geral</servlet-name>
+		<servlet-class>br.com.yaw.servlet.action.GeneralActionServlet</servlet-class>	
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>company</servlet-name>
 		<url-pattern>/company/*</url-pattern>
@@ -83,7 +79,22 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/blob/*</url-pattern>
 	</servlet-mapping>
 	
+	<servlet-mapping>
+		<servlet-name>image</servlet-name>
+		<url-pattern>/image/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>geral</servlet-name>
+		<url-pattern>/geral/*</url-pattern>
+	</servlet-mapping>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/pages/404.jsp</location>
+	</error-page>
+	
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 </web-app>
