inserid link para projetos Open Source

--- a/site/war/WEB-INF/web.xml
+++ b/site/war/WEB-INF/web.xml
@@ -26,8 +26,19 @@
     	<param-value>ahnes25</param-value>
     </init-param>
   </servlet>
+  
+  <servlet>
+  	<servlet-name>controller</servlet-name>
+  	<servlet-class>br.com.yaw.servlet.YaWController</servlet-class>
+  </servlet>
+  
   <servlet-mapping>
     <servlet-name>ContatoServlet</servlet-name>
     <url-pattern>/contato/contato</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>controller</servlet-name>
+    <url-pattern>/open</url-pattern>
   </servlet-mapping>
 </web-app>
