--- a/yawp/.project
+++ b/yawp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>yawp</name>
+	<name>eqtal</name>
 	<comment></comment>
 	<projects>
 	</projects>
