--- a/trunk/yawp/war/WEB-INF/web.xml
+++ b/trunk/yawp/war/WEB-INF/web.xml
@@ -9,11 +9,26 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<filter-name>gae_downtime</filter-name>
 		<filter-class>br.com.yaw.servlet.filter.GAEDownTimeFilter</filter-class>
 	</filter>
+	
+	<filter>
+		<filter-name>appstats</filter-name>
+		<filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
+		<init-param>
+			<param-name>logMessage</param-name>
+			<param-value>Appstats available: /appstats/details?time={ID}</param-value>
+		</init-param>
+	</filter>
 
 	<filter-mapping>
 		<filter-name>gae_downtime</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+		<filter-mapping>
+		<filter-name>appstats</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 
 	<listener>
 		<listener-class>br.com.yaw.servlet.listener.GeneralContextListener</listener-class>
@@ -57,10 +72,20 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>RemoteApi</servlet-name>
 		<servlet-class>com.google.apphosting.utils.remoteapi.RemoteApiServlet</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>appstats</servlet-name>
+		<servlet-class>com.google.appengine.tools.appstats.AppstatsServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>RemoteApi</servlet-name>
 		<url-pattern>/remote_api</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>appstats</servlet-name>
+		<url-pattern>/appstats/*</url-pattern>
 	</servlet-mapping>
 
 
@@ -103,7 +128,18 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<error-code>404</error-code>
 		<location>/pages/404.jsp</location>
 	</error-page>
-
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>appstats</web-resource-name>
+			<url-pattern>/appstats/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
