--- a/trunk/myjobs/src/app.yaml
+++ b/trunk/myjobs/src/app.yaml
@@ -15,5 +15,9 @@ handlers:
   static_dir: django/contrib/admin/media
   expiration: '0'
 
+- url: /static
+  static_dir: static
+  expiration: '16d'
+  
 - url: /.*
   script: djangoappengine/main/main.py
