--- a/newti/promove/WebContent/WEB-INF/web.xml
+++ b/newti/promove/WebContent/WEB-INF/web.xml
@@ -29,9 +29,18 @@
 		<servlet-name>export</servlet-name>
 		<servlet-class>br.com.promove.servlet.ExportacaoServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>import</servlet-name>
+		<servlet-class>br.com.promove.servlet.ImportacaoServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>export</servlet-name>
 		<url-pattern>/export</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>import</servlet-name>
+		<url-pattern>/import</url-pattern>
 	</servlet-mapping>
 	
 	<filter>
