--- a/newti/promove/WebContent/WEB-INF/web.xml
+++ b/newti/promove/WebContent/WEB-INF/web.xml
@@ -7,6 +7,11 @@
 	</context-param>
 	
 	<context-param>
+		<param-name>destinatarios_ctrc</param-name>
+		<param-value>daniel@newti.com.br;</param-value>
+	</context-param>
+	
+	<context-param>
 		<param-name>productionMode</param-name>
 		<param-value>true</param-value>
 	</context-param>
@@ -38,12 +43,12 @@
 	
 	<context-param>
 		<param-name>ctrc_job</param-name>
-		<param-value>0 0 0 ? * *</param-value>
+		<param-value>0 0 2 ? * *</param-value>
 	</context-param>
 	
 	<context-param>
 		<param-name>mail_scheduler</param-name>
-		<param-value>0 0 23 ? * *</param-value>
+		<param-value>0 0 1 ? * *</param-value>
 	</context-param>
 	
 	<context-param>
